tests/failing/modulo_eight_bit.dodo
fn main() {
    let a: u8 = 12;
    let b: u8 = 5;
    printf("%d\n", a % b);
}
